--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,6 @@ jobs:
       - deploy:
           name: Publish application Docker image
           command: |
-            docker login -e $DOCKER_HUB_EMAIL -U $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
+            docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
             docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerap:$CIRCLE_SHA1
             docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerap:latest
